# ollama-bot

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yml
lxmfy_ollama_bot/: __init__.py  bot.py
lxmfy_ollama_bot/cogs/: basic.py  ollama_commands.py
