[tool.poetry]
name = "lxmfy-ollama-bot"
version = "1.2.0"
description = "An LXMF bot for interacting with Ollama LLM Models"
authors = ["Sudo-Ivan"]
readme = "README.md"
packages = [
    { include = "lxmfy_ollama_bot" }
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
lxmfy = "^1.0.1"
python-dotenv = "^1.0.1"
requests = "^2.32.4"
rns = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"

[tool.poetry.scripts]
lxmfy-ollama-bot = "lxmfy_ollama_bot.bot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
