[tool.poetry]
name = "lxmfy-ollama-bot"
version = "1.4.0"
description = "An LXMF bot for interacting with Ollama LLM Models"
authors = ["Sudo-Ivan"]
readme = "README.md"
packages = [
    { include = "lxmfy_ollama_bot" }
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
lxmfy = "^1.0.3"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
rns = "^1.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.3"

[tool.poetry.scripts]
lxmfy-ollama-bot = "lxmfy_ollama_bot.bot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
