[project]
name = "lxmfy-ollama-bot"
version = "1.4.0"
description = "An LXMF bot for interacting with Ollama LLM Models"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sudo-Ivan" }
]
dynamic = ["dependencies"]

[project.scripts]
lxmfy-ollama-bot = "lxmfy_ollama_bot.bot:main"

[tool.poetry]
packages = [
    { include = "lxmfy_ollama_bot" }
]

[tool.poetry.dependencies]
python = "^3.11"
lxmfy = "^1.0.3"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
rns = "^1.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
